fixed alignment issues

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -86,50 +86,57 @@ font-size: large;
 line-height:1.7em;}
 
 .editable{
-cursor:pointer;
+	cursor:pointer;
 }
 
 #mask {
-  position:absolute;
-  left:0;
-  top:0;
-  z-index:9000;
-  background-color:#000;
-  display:none;
+	position:absolute;
+	left:0;
+	top:0;
+	z-index:9000;
+	background-color:#000;
+	display:none;
 }
   
-#dialog2 {
-  position:absolute;
-  left:0;
-  top:0;
-  width:440px;
-  height:200px;
-  display:none;
-  z-index:9999;
-  padding:20px;
-  background:url(../images/notice.png) no-repeat 0 0 transparent; 
-  width:326px; 
-  height:229px;
-  padding:50px 0 20px 25px;
+#dialog2{
+	position:absolute;
+	left:0;
+	top:0;
+	width:440px;
+	height:200px;
+	display:none;
+	z-index:9999;
+	padding:20px;
+	background:url(../images/notice.png) no-repeat 0 0 transparent; 
+	width:326px; 
+	height:229px;
+	padding:50px 0 20px 25px;
 }
 
+.bar{
+	width: 100%;
+	vertical-align: bottom;
+}
 .menu{
 	text-align:right;
-	display: inline-block;
+	position: relative;
+	float: right;
+	padding-top:10px;
 }
 
 #message{
 	margin-left: 35px;
-	font-family: Arial;
+	font-family: 'Special Elite', arial, serif;
 	display: inline-block;
 	margin-bottom: 25px;
-	
+	min-width: 600px;
 	}
 #title{
 	border:0px;
+	font-family: 'Special Elite', arial, serif;
 	font-size:28px;
 	font-weight:bold;
-	width:100%;
+	width: 100%;
 }
 #title:hover{
 	background-color: rgb(255, 255, 211);
